﻿IMPROVEMENTS / FIXES
- General:
	- Russian localisation thanks to user Akteon_.
- AI / WM:
	- Allow selecting which fields to auto-tune in the AI GUI. (Fixed-P option removed from the PAW.)
	- Show the best loss value in auto-tuning.
	- Log the latest best auto-tuning values to the KSP.log even without debug AI enabled.
	- AI will now try to recover from flat spins by idling engines and pointing nose downward.
	- Allow damping values to go down to 0.1 instead of 1.
	- Prevent the AI GUI from rounding slider values when not adjusted by hand (e.g., during auto-tuning).
- Weapons:
	- Add a stagger option to barrage mode that fires barrages in bursts and adds variability to the reload times. Mostly only suitable for slow-firing ship guns.
- Competitions:
	- Add a --no-header option to the parsing script.

v1.5.5.1
IMPROVEMENTS / FIXES
- Fix NRE in trajectory sim.
- Fix active vessel not firing under AI control.
- Fix firing of missiles via hotkey not respecting ripple/single setting.

v1.5.5.0
IMPROVEMENTS / FIXES
- General:
	- Add a --tsv option to the n-choose-k parsing script to output a TSV file instead of a CSV file.
	- Tweaks to scroll-zoom prevention.
	- Exclude weapons from the bounds calculations as they sometimes give weird values (e.g., lasers when firing).
- UI:
	- Add an option in the UI settings for disabling scroll-zoom prevention when over BDA windows.
	- Add version watermark to Competition UI and Vessel Switcher window.
- AI / WM:
	- Fixes for Stationary surface vessel mode.
		- No longer panics, even if airborne (allows for floating/free-fall turrets).
		- Attitude control (using RCS and reaction wheels) is applied when an enemy is within the engagement range.
	- Add 'Target Damage' Target Priority setting.
	- Add keybindings for "Next Weapon", "Prev Weapon" and "Fire Missile" in the WM (keybindings for firing guns are on the weapons).
- Detectors
	- Some optimizations to the ECMJammer code.
	- Active jammers now appear on Radar Warning Receivers.