@@ -2,6 +2,9 @@
 using System.Linq;
 using UnityEngine;
 
+using BDArmory.Extensions;
+using BDArmory.Settings;
+
 namespace BDArmory.Utils
 {
     [KSPAddon(KSPAddon.Startup.Flight, false)]
@@ -12,6 +15,11 @@ namespace BDArmory.Utils
 
         public static void AddPartToExplode(Part p)
         {
+            if (BDArmorySettings.KERBAL_SAFETY > 0 && p.IsKerbalEVA()) // Don't explode kerbals if KerbalSafety is enabled.
+            {
+                // Debug.LogWarning($"[BDArmory.PartExploderSystem]: Refusing to explode EVA kerbal {p}");
+                return;
+            }
             if (p != null)
             { ExplodingParts.Add(p); }
         }
