@@ -1,6 +1,7 @@
 ﻿IMPROVEMENTS / FIXES
 - General:
 	- Russian localisation thanks to user Akteon_.
+	- Fix EVA kerbals not always deploying their parachutes properly with Kerbal Safety enabled.
 - AI / WM:
 	- Allow selecting which fields to auto-tune in the AI GUI. (Fixed-P option removed from the PAW.)
 	- Show the best loss value in auto-tuning.
